--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>ClickFlix</title>
     <link href="./css/index.css" type="text/css" rel="stylesheet">
+    <meta name="viewport" id ="zapViewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0 user-scalable=no">
 </head>
 <body>
 <div id="root" class="root">
