--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <div id="root" class="root">
     <div class="gameTitle">
         <span class="titleCO">ClickFlix</span>
-        <span class="rotatorLeft rotator"></span>
-        <span class="rotatorRight rotator"></span>
+        <!--<span class="rotatorLeft rotator"></span>-->
+        <!--<span class="rotatorRight rotator"></span>-->
     </div>
     <div id="actionContainer" class="actionContainer"></div>
     <div id="gameContainer" class="gameContainer">
