--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
     <div id="dialog" class="dialog">
         <div class="gameTitle">ClickFlix</div>
         <div class="dialogContentContainer">
-            <div id="levelContainer" class="levelContainer"></div>
+            <div id="levelContainer" class="levelContainer">
+                <div class="colorWhite">
+                    <h2>Rules</h2>
+                    <div>1. Don't miss the yellow else the game is over</div>
+                    <div>2. Hit the green to get bonus (but if you miss it, game goes on)</div>
+                    <div>3. Hit the red and the game is over</div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
